--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
     "description": "",
     "license": "MIT",
     "scripts": {
-        "start": "npm-run-all start:server start:client",
+        "start": "run-p start:server start:client",
         "start:client": "vite",
         "start:server": "tinylicious 7070"
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@fluidframework/tinylicious-client": "2.0.0-rc.1.0.1",
+        "fluid-framework": "2.0.0-rc.1.0.1"
     },
     "devDependencies": {
-        "@fluidframework/build-common": "^2.0.3",
-        "@fluidframework/tinylicious-client": "^1.3.7",
         "babel-preset-nano-react-app": "^0.1.0",
-        "fluid-framework": "^1.3.7",
         "npm-run-all": "^4.1.5",
-        "tinylicious": "^3.0.0",
-        "vite": "^4.3.8"
+        "vite": "^4.3.8",
+        "@fluidframework/build-common": "^2.0.3",
+        "tinylicious": "^3.0.0"
     },
     "babel": {
         "presets": [
